--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -1,14 +1,14 @@
-name: Android Coverage Test
+name: Android Coverage and E2E Tests
+
 permissions:
   contents: read
-
 
 on:
   pull_request:
     types: [opened, synchronize, reopened]
 
 jobs:
-  test:
+  unit-tests:
     name: Run Unit Tests with Coverage
     runs-on: ubuntu-22.04
 
@@ -18,20 +18,16 @@ jobs:
         with:
           fetch-depth: 0
 
-
-      - name: Install OpenJDK 17
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y openjdk-17-jdk
-          java -version
-
-      - name: Set JAVA_HOME
-        run: echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 17
 
       - name: Grant execute permission to Gradlew
         run: chmod +x gradlew
 
-      - name: Run Tests with Coverage
+      - name: Run Unit Tests with Coverage
         run: ./gradlew testDebugUnitTestCoverage jacocoTestReport
 
       - name: Check Coverage Threshold (70%)
@@ -42,3 +38,51 @@ jobs:
         with:
           name: coverage-report
           path: app/build/reports/jacoco/
+
+  e2e-tests:
+    name: Run Instrumented E2E Tests
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 17
+
+      - name: Grant execute permission to Gradlew
+        run: chmod +x gradlew
+
+      - name: Run E2E Tests on Android Emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 30
+          target: default
+          arch: x86_64
+          profile: Nexus 6
+          script: ./gradlew connectedDebugAndroidTest
+          disable-animations: true
+          emulator-options: -no-window -no-audio -no-boot-anim
+
+      - name: Check that tests actually ran
+        run: |
+          REPORT_DIR="app/build/outputs/androidTest-results/connected"
+          if [ ! -d "$REPORT_DIR" ]; then
+            echo "❌ Report directory not found: $REPORT_DIR"
+            exit 1
+          fi
+
+          TEST_COUNT=$(grep -o 'tests="[^"]*"' "$REPORT_DIR"/*.xml | grep -o '[0-9]*' | paste -sd+ - | bc)
+          echo "✅ Instrumented test count: $TEST_COUNT"
+
+          if [ "$TEST_COUNT" -eq "0" ]; then
+            echo "❌ No instrumented tests were executed."
+            exit 1
+          fi
