--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -43,7 +43,6 @@ jobs:
     name: Run Instrumented E2E Tests
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    needs: unit-tests
 
     steps:
       - name: Checkout repository
@@ -63,31 +62,15 @@ jobs:
         with:
           api-level: 30
           target: google_apis
-          arch: x86_64
-          profile: Nexus 6
+          arch: x86
+          profile: Nexus 5
           disable-animations: true
           disable-linux-hw-accel: true
           emulator-boot-timeout: 800
-          emulator-options: -no-window -no-audio -no-boot-anim -gpu swiftshader_indirect -no-snapshot -no-metrics
-          script: ./gradlew connectedDebugAndroidTest
-
-      - name: Verify emulator booted and is online
-        run: |
-          echo "⏳ Waiting for emulator to boot..."
-          boot_completed=""
-          retry=0
-          max_retry=30
-          until [[ "$boot_completed" == "1" || $retry -ge $max_retry ]]; do
-            sleep 10
-            boot_completed=$(adb -e shell getprop sys.boot_completed 2>/dev/null | tr -d '\r')
-            echo "Boot status: $boot_completed"
-            ((retry++))
-          done
-          
-          if [[ "$boot_completed" != "1" ]]; then
-            echo "❌ Emulator failed to boot properly after $((10 * max_retry)) seconds."
-            adb devices
-            exit 1
-          else
-            echo "✅ Emulator is up and running!"
-          fi
+          emulator-options: -no-window -no-audio -no-boot-anim -gpu swiftshader_indirect -no-snapshot -no-metrics -memory 2048 -skin 480x800
+          script: |
+            adb shell settings put global window_animation_scale 0
+            adb shell settings put global transition_animation_scale 0
+            adb shell settings put global animator_duration_scale 0
+            sleep 30
+            ./gradlew connectedDebugAndroidTest
