--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -1,38 +1,40 @@
-name: Android Coverage Test
+name: Android Coverage and E2E Tests
+
+permissions:
+  contents: read
 
 on:
   pull_request:
     types: [opened, synchronize, reopened]
 
 jobs:
-  test:
+  unit-tests:
     name: Run Unit Tests with Coverage
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Install OpenJDK 17
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y openjdk-17-jdk
-          java -version
-
-      - name: Set JAVA_HOME
-        run: echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 17
 
       - name: Grant execute permission to Gradlew
         run: chmod +x gradlew
 
-      - name: Run Tests with Coverage
+      - name: Run Unit Tests with Coverage
         run: ./gradlew testDebugUnitTestCoverage jacocoTestReport
 
       - name: Check Coverage Threshold (70%)
         run: ./gradlew checkCoverage
 
       - name: Upload Coverage Report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: app/build/reports/jacoco/jacocoTestReport/html/
+          path: app/build/reports/jacoco/
