--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,31 @@
 [versions]
 agp = "8.9.1"
+core = "1.6.1"
+coreTesting = "2.2.0"
 kotlin = "2.0.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
+kotlinxCoroutinesTest = "1.7.3"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
 composeBom = "2025.03.01"
+mockk = "1.13.10"
 navigationCompose = "2.8.9"
 junitJunit = "4.13.2"
 koin = "3.5.3"
 retrofit = "2.9.0"
+robolectric = "4.10.3"
 securityCrypto = "1.1.0-alpha06"
 datastore = "1.0.0"
 serializationKotlin = "1.6.0"
-gsonVersion = "2.10.1"
+coreKtxVersion = "1.6.1"
 
 [libraries]
+androidx-core = { module = "androidx.test:core", version.ref = "core" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -37,6 +44,9 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 androidx-security-crypto = { group = "androidx.security", name = "security-crypto", version.ref = "securityCrypto" }
 junit-junit = { group = "junit", name = "junit", version.ref = "junitJunit" }
 core-koin = { group = "io.insert-koin", name = "koin-core", version.ref = "koin" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 viewmodel-koin = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
 integration-koin = { group = "io.insert-koin", name = "koin-test", version.ref = "koin" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
@@ -44,6 +54,7 @@ retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", ver
 datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
 serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serializationKotlin" }
 gson = { group = "com.google.code.gson", name = "gson", version = "gsonVersion" }
+core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "coreKtxVersion" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
