[GPF-149] login screen (#3)
* Add color definitions, rename MainActivity to EntryActivity, and create the EntryActivity UI

* Refactor project namespace from 'cpp' to 'ccp', update theme names, and implement navigation structure with Login and Register screens

* WIP: Implement LoginScreen UI with email and password fields, back button, and login action

* Add Screen to build.gradle.kts exclusions for test and UI components

* Add Composable exclusion to build.gradle.kts and enhance code coverage reporting

* Enhance LoginScreen UI with password visibility toggle and custom CCPTextField component

* Implement authentication flow with LoginScreen, ViewModel, and repository pattern

* Add unit tests for authentication and data storage components

- Implement AuthInterceptorTest to verify Authorization header handling
- Create DatasourceTest to ensure data storage functionality
- Add LoginRepositoryImplTest for login process validation
- Introduce LoginViewModelTest to test login UI state management
- Enhance MessageErrorHelperKtTest for error message retrieval
- Update Validator to use regex for email validation
- Modify CoreModule to include DataStore for preferences
- Update build.gradle.kts to include necessary testing dependencies

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,31 @@
 [versions]
 agp = "8.9.1"
+core = "1.6.1"
+coreTesting = "2.2.0"
 kotlin = "2.0.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
+kotlinxCoroutinesTest = "1.7.3"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
 composeBom = "2025.03.01"
+mockk = "1.13.10"
 navigationCompose = "2.8.9"
 junitJunit = "4.13.2"
+koin = "3.5.3"
+retrofit = "2.9.0"
+robolectric = "4.10.3"
+securityCrypto = "1.1.0-alpha06"
+datastore = "1.0.0"
+serializationKotlin = "1.6.0"
+coreKtxVersion = "1.6.1"
 
 [libraries]
+androidx-core = { module = "androidx.test:core", version.ref = "core" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -26,11 +39,25 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-material-icons = { group = "androidx.compose.material", name = "material-icons-extended" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+androidx-security-crypto = { group = "androidx.security", name = "security-crypto", version.ref = "securityCrypto" }
 junit-junit = { group = "junit", name = "junit", version.ref = "junitJunit" }
-
+core-koin = { group = "io.insert-koin", name = "koin-core", version.ref = "koin" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
+viewmodel-koin = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
+integration-koin = { group = "io.insert-koin", name = "koin-test", version.ref = "koin" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
+serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serializationKotlin" }
+gson = { group = "com.google.code.gson", name = "gson", version = "gsonVersion" }
+core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "coreKtxVersion" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+parcelize = { id = "kotlin-parcelize" }
+serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
